Addition of functional improvements

--- a/MusicDiary/app/src/main/res/values/strings.xml
+++ b/MusicDiary/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="search">Search</string>
     <string name="favourites">Favourites</string>
     <string name="_11918541_rosi_eliz_dzhurkova">11918541 Rosi-Eliz Dzhurkova</string>
+    <string name="no_items_to_display">No items to display</string>
 </resources>
